Refatoração de código.